fixed visibility of 'Know More' button

--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -24,12 +24,8 @@
 /* Hero Style */
 .cta-btn--hero {
   color: #fff;
-  // background-image: linear-gradient(
-  //   135deg,
-  //   $primary-color 0%,
-  //   $secondary-color 100%
-  // );
-  background-image: linear-gradient(43deg, #ff970f 0%, #C850C0 46%, #ff7424 100%);
+  background-color: #fff;
+  // background-image: linear-gradient(43deg, #ff970f 0%, #C850C0 46%, #ff7424 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   border: 2px solid transparent;
@@ -43,11 +39,7 @@
   }
 
   &::after {
-    background-image: linear-gradient(
-      135deg,
-      $primary-color 0%,
-      $secondary-color 100%
-    );
+    background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
     // Responsive Button hero style
     @include respond(phone) {
       background-image: none;
